<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.mmrbd.starwarsexplorer.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navHome_to_navCharacterDetails"
            app:destination="@id/navCharacterDetails" />
    </fragment>

    <fragment
        android:id="@+id/navStarships"
        android:name="com.mmrbd.starwarsexplorer.presentation.starship.StarshipFragment"
        android:label="@string/title_start_ship"
        tools:layout="@layout/fragment_planet" />

    <fragment
        android:id="@+id/navPlanets"
        android:name="com.mmrbd.starwarsexplorer.presentation.planet.PlanetFragment"
        android:label="@string/title_planets"
        tools:layout="@layout/fragment_starship" />
    <fragment
        android:id="@+id/navCharacterDetails"
        android:name="com.mmrbd.starwarsexplorer.presentation.details.CharacterDetailsFragment"
        android:label="@string/character_details"
        tools:layout="@layout/fragment_character_details" >


        <argument
            android:name="CharacterEntity"
            app:argType="com.mmrbd.starwarsexplorer.domain.entities.CharacterEntity" />


    </fragment>
</navigation>