<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/space_18dp">

    <ImageView
        android:id="@+id/imgCharacter"
        android:layout_width="50sp"
        android:layout_height="50dp"
        android:src="@drawable/ic_planet"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_20dp"
        android:text="@string/planet_name"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/tvDiameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgCharacter"
        app:layout_constraintTop_toTopOf="@id/imgCharacter"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDiameter"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_20dp"
        android:text="@string/diameter"
        app:layout_constraintBottom_toBottomOf="@id/imgCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgCharacter"
        app:layout_constraintTop_toBottomOf="@id/tvName" />


    <TextView
        android:id="@+id/tvPopulation"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/populations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvDiameter"
        app:layout_constraintTop_toBottomOf="@id/tvDiameter" />

</androidx.constraintlayout.widget.ConstraintLayout>